--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,50 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+  background-color: #282c34;
   color: white;
+  padding: 40px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-box {
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 16px;
+  width: 300px;
+  text-align: center;
+}
+
+.qr-code {
+  margin-top: 20px;
+  background: transparent;
+  padding: 10px;
+}
+
+.download-btn {
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #008cba;
+  color: white;
+  border: none;
+}
+
+input[type="color"] {
+  margin-left: 10px;
+}
+
+select {
+  width: 100%;
+  padding: 10px 8px;
 }
